--- a/Web_app/requirements.txt
+++ b/Web_app/requirements.txt
@@ -1,26 +1,14 @@
 base58==2.1.0
 docx2txt==0.8
-ipython==7.25.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
 matplotlib==3.4.3
 matplotlib-inline==0.1.2
 numpy==1.21.1
 openpyxl==3.0.7
 pandas==1.3.1
-pdfminer.six==20200517
 pdfplumber==0.5.28
-pipreqs==0.4.10
-pydeck==0.6.2
-Pygments==2.9.0
-pyparsing==2.4.7
 PyPDF3==1.0.5
-pyrsistent==0.18.0
-python-dateutil==2.8.2
-pytz==2021.1
-pywin32==301
-pywinpty==1.1.3
-pyzmq==22.1.0
-requests==2.26.0
 scikit-learn==0.24.2
+streamlit==0.86.0
 urllib3==1.26.6
+widgetsnbextension==3.5.1
+plotly==5.3.1
